# icebox

./: .gitignore  CMakeLists.txt  Doxyfile  link.ld
include/icebox/: dtb.h  kprint.h
include/icebox/drivers/: uart.h
include/icebox/sync/: spinlock.h
include/libk/: string.h
include/libsbi/: sbi.h
kernel/: CMakeLists.txt  dtb.c  kmain.c  kprint.c
kernel/drivers/: CMakeLists.txt  uart.c
kernel/sync/: CMakeLists.txt  spinlock.c
lib/: CMakeLists.txt
lib/libk/: CMakeLists.txt  string.c
lib/libsbi/: CMakeLists.txt  base.c  hart.c  legacy.c  sbi.c
